# airouter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.example.yml
.github/workflows/: docker.yml
src/: auth.rs  config.rs  csv_log.rs  embed.rs  history.rs  main.rs  monitor.rs  proxy.rs  routes.rs  state.rs
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.tsx  context.tsx  index.css  main.tsx  types.ts
web/src/components/: AuthGuard.tsx  DetailPanel.tsx  JsonView.tsx  LangSwitcher.tsx  RequestView.tsx  ResponseView.tsx  TextModal.tsx  ThemeSwitcher.tsx
web/src/i18n/: index.ts
web/src/i18n/locales/: en.json  zh.json
web/src/pages/: AnalyticsPage.tsx  Dashboard.tsx  HistoryPage.tsx  LoginPage.tsx  RoutesPage.tsx
