[package]
name = "airouter"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-embed = "8"
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", features = ["http1", "json", "macros", "tokio", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
bytes = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
http = "1"
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls", "stream"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
